Lazy fix for active class when viewport is too small for sidebar.

--- a/docs/_static/style.css
+++ b/docs/_static/style.css
@@ -496,4 +496,8 @@ div#welcome-to-discord-py > h1 {
     color: #fff;
   }
 
+  .active {
+    background-color: transparent;
+    border-left: none;
+  }
 }
